refactor: use List#of